--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <button class="type-btn" data-type="tournament">
                   <span class="tb-icon">🏅</span>
                   <span class="tb-name">Turnier</span>
-                  <span class="tb-pts pos">+25</span>
+                  <span class="tb-pts pos">+50</span>
                 </button>
                 <button class="type-btn" data-type="penalty">
                   <span class="tb-icon">⚠️</span>
@@ -466,7 +466,7 @@
               🥋 +1 Training
             </button>
             <button class="mqs-btn tournament" data-type="tournament">
-              🏅 +25 Turnier
+              🏅 +50 Turnier
             </button>
             <button class="mqs-btn penalty" data-type="penalty">
               ⚠️ −5 Verwarnung
@@ -489,6 +489,9 @@
         <div id="modal-history" class="modal-history"></div>
 
         <div class="modal-footer">
+          <button class="btn-close-modal" id="btn-close-modal">
+            Schließen
+          </button>
           <button class="btn-danger-sm" id="btn-deactivate">
             Athlet deaktivieren
           </button>
