--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500;600;700;800&family=Barlow:wght@400;500;600&family=JetBrains+Mono:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <!-- Favicon Browser-Tab -->
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon-32.png" />
+
+    <!-- iOS Homescreen -->
+    <link rel="apple-touch-icon" href="/icon-180.png" />
+    <meta name="apple-mobile-web-app-title" content="BJJ Trainer" />
+
+    <!-- Android / PWA Homescreen -->
+    <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
