--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="apple-mobile-web-app-title" content="BJJ Trainer" />
 
     <!-- Android / PWA Homescreen -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
