--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       rel="stylesheet"
     />
     <!-- Favicon Browser-Tab -->
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/icon-32.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-96x96.png" />
 
     <!-- iOS Homescreen -->
-    <link rel="apple-touch-icon" href="/icon-180.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="BJJ Trainer" />
 
     <!-- Android / PWA Homescreen -->
